--- a/prepros-6.config
+++ b/prepros-6.config
@@ -34,6 +34,23 @@
         "_stylus/_navbar.styl",
         "_stylus/_tables.styl"
       ]
+    },
+    {
+      "path": "stylus/styles.styl",
+      "imports": [
+        "stylus/_variables.styl",
+        "stylus/_type.styl",
+        "stylus/_scrollbar.styl",
+        "stylus/_sidebar.styl",
+        "stylus/_buttons.styl",
+        "stylus/_breadcrumb.styl",
+        "stylus/_callouts.styl",
+        "stylus/_forms.styl",
+        "stylus/_input-group.styl",
+        "stylus/_nav.styl",
+        "stylus/_navbar.styl",
+        "stylus/_tables.styl"
+      ]
     }
   ],
   "projectView": {
