--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@
 # in the templates via {{ site.myvariable }}.
 title: BulkSales Services
 description: A theme of Grupo Telepizza for documentation
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://rubsuno.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/bulksales"
+url: "https://rubsuno.github.io"
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
@@ -26,10 +26,6 @@ search_enabled: true
 
 # Color scheme currently only supports "dark" or nil (default)
 color_scheme: nil
-
-# Google Analytics Tracking (optional)
-# e.g, UA-1234567-89
-ga_tracking: UA-2709176-10
 
 plugins:
   - jekyll-seo-tag
