--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: BulkSales Services
 description: A theme of Grupo Telepizza for documentation
-baseurl: "/bulksales"
+baseurl: #"/bulksales"
 url: "https://rubsuno.github.io/bulksales/"
 
 permalink: pretty
