--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: BulkSales Services
 description: A template of Grupo Telepizza for documentation
 baseurl: # the subpath of your site, e.g. /blog
-url: "https://rubsuno.github.io/bulksales/"
+url: "https://rubsuno.github.io/"
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
